--- a/css/main.css
+++ b/css/main.css
@@ -1337,6 +1337,11 @@ header .banner img.artwork-3 {
     border-radius: 60px;
     position: absolute;
     bottom: 0;
+    transition: all .4s ease-in-out
+}
+
+.our-team .member:hover .member-picture .member-picture-container {
+    background: #f15a29;
 }
 
 .our-team .member-1 .member-picture img {
