updated step title hover effect in  selection process section | Companies page

--- a/css/main.css
+++ b/css/main.css
@@ -740,6 +740,7 @@ header .banner img.artwork-3 {
 
 .selection-process .step-title span {
     opacity: 0;
+    display: block;
 }
 
 .selection-process .step:hover .step-title {
