--- a/css/main.css
+++ b/css/main.css
@@ -732,7 +732,8 @@ header .banner img.artwork-3 {
 
 .selection-process .step-title {
     margin: 0;
-    font-family: "HelveticaNeue-Bold", Helvetica, Arial, serif;
+    font-family: sans-serif;
+    font-weight: normal;
     font-size: 36px;
     line-height: 44px;
     color: #fff;
@@ -749,6 +750,8 @@ header .banner img.artwork-3 {
 }
 
 .selection-process .step-description {
+    font-family: sans-serif;
+    font-weight: normal;
     color: #fff;
     font-size: 24px;
     line-height: 29px;
